# arcanist

./: .gitignore  BUILD.bazel  LICENSE  README.md  deps.bzl  go.mod  go.sum  release.sh
cli/: BUILD.bazel  arc.go
cli/cascade/: BUILD.bazel  cascade.go
cli/diff/: BUILD.bazel  diff.go
cli/flow/: BUILD.bazel  flow.go
cli/graft/: BUILD.bazel  graft.go
cli/land/: BUILD.bazel  land.go
cli/prune/: BUILD.bazel  prune.go
cli/shared/: BUILD.bazel  config.go
cmd/arc/: .gitignore  BUILD.bazel  main.go
lib/console/: BUILD.bazel  color.go  draw_cascade.go  draw_graph.go  draw_graph_test.go  draw_prune.go
lib/git/: BUILD.bazel  branch.go  branch_test.go  cascade.go  checkout.go  commit.go  delete.go  graft.go  lbranch_graph.go  open.go  parent.go  raw.go  rebase.go
lib/globals/: BUILD.bazel  globals.go
lib/util/: BUILD.bazel  split.go
