load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = ["arc.go"],
    importpath = "github.com/pinkluz/arcanist/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/shared",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
