load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "diff",
    srcs = ["diff.go"],
    importpath = "github.com/pinkluz/arcanist/cli/diff",
    visibility = ["//visibility:public"],
    deps = [
        "//cli",
        "//lib/git",
        "@com_github_spf13_cobra//:cobra",
    ],
)
