load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "flow",
    srcs = ["flow.go"],
    importpath = "github.com/pinkluz/arcanist/cli/flow",
    visibility = ["//visibility:public"],
    deps = [
        "//cli",
        "//lib/console",
        "//lib/git",
        "@com_github_spf13_cobra//:cobra",
    ],
)
