load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graft",
    srcs = ["graft.go"],
    importpath = "github.com/pinkluz/arcanist/cli/graft",
    visibility = ["//visibility:public"],
    deps = [
        "//cli",
        "//lib/git",
        "@com_github_spf13_cobra//:cobra",
    ],
)
