load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "arc_lib",
    srcs = ["main.go"],
    importpath = "github.com/pinkluz/arcanist/cmd/arc",
    visibility = ["//visibility:private"],
    deps = [
        "//cli",
        "//cli/cascade",
        "//cli/diff",
        "//cli/flow",
        "//cli/graft",
        "//cli/prune",
    ],
)

go_binary(
    name = "arc",
    embed = [":arc_lib"],
    visibility = ["//visibility:public"],
)
