load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "git",
    srcs = [
        "branch.go",
        "checkout.go",
        "commit.go",
        "delete.go",
        "graft.go",
        "lbranch_graph.go",
        "open.go",
        "parent.go",
        "raw.go",
        "rebase.go",
    ],
    importpath = "github.com/pinkluz/arcanist/lib/git",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/globals",
        "//lib/util",
        "@com_github_cheggaaa_pb_v3//:pb",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
    ],
)

go_test(
    name = "git_test",
    srcs = ["branch_test.go"],
    embed = [":git"],
    deps = [],
)
